--- a/admin/view/template/extension/payment/paynow.twig
+++ b/admin/view/template/extension/payment/paynow.twig
@@ -20,35 +20,11 @@
             </div>
             <div class="panel-body">
                 <form action="{{ action }}" method="post" enctype="multipart/form-data" id="form" class="form-horizontal">
-                    <div class="form-group">
-                        <label class="col-sm-2 control-label" for="payment_paynow_order_status_id">{{ entry_order_status }}</label>
-                        <div class="col-sm-10">
-                            <select name="payment_paynow_order_status_id" id="payment_paynow_order_status_id" class="form-control">
-                                {% for order_status in order_statuses %}
-                                    {% if order_status.order_status_id == payment_paynow_order_status_id %}
-                                        <option value="{{ order_status.order_status_id }}" selected="selected">{{ order_status.name }}</option>
-                                    {% else %}
-                                        <option value="{{ order_status.order_status_id }}">{{ order_status.name }}</option>
-                                    {% endif %}
-                                {% endfor %}
-                            </select>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label class="col-sm-2 control-label" for="payment_paynow_text_config_one">{{ entry_text_config_one }}</label>
-                        <div class="col-sm-10">
-                            <input type="text" name="payment_paynow_text_config_one" value="{{ payment_paynow_text_config_one }}" class="form-control" size="10" />
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label class="col-sm-2 control-label" for="payment_paynow_text_config_two">{{ entry_text_config_two }}</label>
-                        <div class="col-sm-10">
-                            <input type="text" name="payment_paynow_text_config_two" value="{{ payment_paynow_text_config_two }}" class="form-control" size="10" />
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label class="col-sm-2 control-label" for="payment_paynow_status">{{ entry_status }}</label>
-                        <div class="col-sm-10">
+                    <div class="form-group required">
+                        <label class="control-label col-sm-3" for="payment_paynow_status">
+                            <span data-toggle="tooltip" title="{{ entry_status_help }}">{{ entry_status }}</span>
+                        </label>
+                        <div class="col-sm-9">
                             <select name="payment_paynow_status" id="payment_paynow_status" class="form-control">
                                 {% if payment_paynow_status %}
                                     <option value="1" selected="selected">{{ text_enabled }}</option>
@@ -58,6 +34,63 @@
                                     <option value="0" selected="selected">{{ text_disabled }}</option>
                                 {% endif %}
                             </select>
+                        </div>
+                    </div>
+                    <div class="form-group required">
+                        <label class="control-label col-sm-3" for="payment_paynow_order_success_status_id">
+                            <span data-toggle="tooltip" title="{{ entry_order_success_status_help }}">{{ entry_order_success_status }}</span>
+                        </label>
+                        <div class="col-sm-9">
+                            <select name="payment_paynow_order_success_status_id" id="payment_paynow_order_success_status_id" class="form-control">
+                                {% for order_status in order_statuses %}
+                                    {% if order_status['order_status_id'] == payment_paynow_order_success_status_id %}
+                                        <option value="{{ order_status['order_status_id'] }}" selected="selected">{{ order_status['name'] }}</option>
+                                    {% else %}
+                                        <option value="{{ order_status['order_status_id'] }}">{{ order_status['name'] }}</option>
+                                    {% endif %}
+                                {% endfor %}
+                            </select>
+                            <small class="text-info">{{ entry_order_success_status_help }}</small>
+                        </div>
+                    </div>
+                    <div class="form-group required">
+                        <label class="control-label col-sm-3" for="payment_paynow_order_failed_status_id">
+                            <span data-toggle="tooltip" title="{{ entry_order_failed_status_help }}">{{ entry_order_failed_status }}</span>
+                        </label>
+                        <div class="col-sm-9">
+                            <select name="payment_paynow_order_failed_status_id" id="payment_paynow_order_failed_status_id" class="form-control">
+                                {% for order_status in order_statuses %}
+                                    {% if order_status['order_status_id'] == payment_paynow_order_failed_status_id %}
+                                        <option value="{{ order_status['order_status_id'] }}" selected="selected">{{ order_status['name'] }}</option>
+                                    {% else %}
+                                        <option value="{{ order_status['order_status_id'] }}">{{ order_status['name'] }}</option>
+                                    {% endif %}
+                                {% endfor %}
+                            </select>
+                            <small class="text-info">{{ entry_order_failed_status_help }}</small>
+                        </div>
+                    </div>
+                    <div class="form-group required">
+                        <label class="control-label col-sm-3" for="payment_paynow_config_one">
+                            <span data-toggle="tooltip" title="{{ entry_config_one_help }}">{{ entry_config_one }}</span>
+                        </label>
+                        <div class="col-sm-9">
+                            <input type="text" name="payment_paynow_config_one" value="{{ payment_paynow_config_one }}" class="form-control" />
+                        </div>
+                    </div>
+                    <div class="form-group required">
+                        <label class="control-label col-sm-3" for="payment_paynow_config_two">
+                            <span data-toggle="tooltip" title="{{ entry_config_two_help }}">{{ entry_config_two }}</span>
+                        </label>
+                        <div class="col-sm-9">
+                            <input type="text" name="payment_paynow_config_two" value="{{ payment_paynow_config_two }}" class="form-control" />
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <label class="col-sm-3 control-label" for="payment_paynow_sort_order">{{ entry_sort_order }}</label>
+                        <div class="col-sm-9">
+                            <input type="text" name="payment_paynow_sort_order" value="{{ payment_paynow_sort_order }}" placeholder="{{ entry_sort_order }}" id="payment_paynow_sort_order" class="form-control" />
                         </div>
                     </div>
                 </form>
