--- a/catalog/view/theme/default/template/extension/payment/paynow.twig
+++ b/catalog/view/theme/default/template/extension/payment/paynow.twig
@@ -1,3 +1,4 @@
+<link rel="stylesheet" type="text/css" href="{{ store_url }}catalog/view/theme/default/stylesheet/paynow.css">
 <h2>{{ text_instruction }}</h2>
 <p>{{ text_description }}</p>
 
