--- a/admin/view/template/extension/payment/paynow.twig
+++ b/admin/view/template/extension/payment/paynow.twig
@@ -53,6 +53,23 @@
                         </div>
                     </div>
                     <div class="form-group required">
+                        <label class="control-label col-sm-3" for="payment_paynow_order_init_status_id">
+                            <span data-toggle="tooltip" title="{{ entry_order_init_status_help }}">{{ entry_order_init_status }}</span>
+                        </label>
+                        <div class="col-sm-9">
+                            <select name="payment_paynow_order_init_status_id" id="payment_paynow_order_init_status_id" class="form-control">
+                                {% for order_status in order_statuses %}
+                                    {% if order_status['order_status_id'] == payment_paynow_order_init_status_id %}
+                                        <option value="{{ order_status['order_status_id'] }}" selected="selected">{{ order_status['name'] }}</option>
+                                    {% else %}
+                                        <option value="{{ order_status['order_status_id'] }}">{{ order_status['name'] }}</option>
+                                    {% endif %}
+                                {% endfor %}
+                            </select>
+                            <small class="text-info">{{ entry_order_init_status_help }}</small>
+                        </div>
+                    </div>
+                    <div class="form-group required">
                         <label class="control-label col-sm-3" for="payment_paynow_order_success_status_id">
                             <span data-toggle="tooltip" title="{{ entry_order_success_status_help }}">{{ entry_order_success_status }}</span>
                         </label>
